AK-8962 performance imporvements identified by Alans scripts
git-svn-id: https://source.sakaiproject.org/svn/polls/trunk@47046 66ffb92e-73f9-0310-93c1-f5514f145a0a